<resources>
    <string name="app_name">Tugas_Chapter3</string>
    <string name="tahun_lahir">Tahun lahir</string>
    <string name="save">Save</string>
    <string name="name">name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="input_name">Input name</string>
    <string name="my_data_parcelable">My Data Parcelable</string>
</resources>