<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bundle.BundleActivity">

    <EditText
        android:id="@+id/insert_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/tahun_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tahun_lahir"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"/>

</LinearLayout>